err/freearch.theme.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/freearch'...
Listing './lib/python3.5/site-packages/freearch/theme'...
Listing './lib/python3.5/site-packages/freearch/theme/browser'...
Compiling './lib/python3.5/site-packages/freearch/theme/browser/frontpage.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (frontpage.py, line 46)
Listing './lib/python3.5/site-packages/freearch/theme/browser/images'...
Listing './lib/python3.5/site-packages/freearch/theme/browser/javascript'...
Listing './lib/python3.5/site-packages/freearch/theme/browser/stylesheets'...
Listing './lib/python3.5/site-packages/freearch/theme/browser/templates'...
Listing './lib/python3.5/site-packages/freearch/theme/locales'...
Listing './lib/python3.5/site-packages/freearch/theme/locales/en'...
Listing './lib/python3.5/site-packages/freearch/theme/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/freearch/theme/locales/fi'...
Listing './lib/python3.5/site-packages/freearch/theme/locales/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/freearch/theme/profiles'...
Listing './lib/python3.5/site-packages/freearch/theme/profiles/default'...
Listing './lib/python3.5/site-packages/freearch/theme/profiles/default/types'...
Listing './lib/python3.5/site-packages/freearch/theme/skins'...
Listing './lib/python3.5/site-packages/freearch/theme/skins/freearch_images'...
Listing './lib/python3.5/site-packages/freearch/theme/skins/freearch_styles'...
Listing './lib/python3.5/site-packages/freearch/theme/skins/freearch_templates'...
Compiling './lib/python3.5/site-packages/freearch/theme/skins/freearch_templates/getFooter.py'...
***   File "./lib/python3.5/site-packages/freearch/theme/skins/freearch_templates/getFooter.py", line 22
    return footer.getText()
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/freearch/theme/skins/freearch_templates/getHeaderImage.py'...
***   File "./lib/python3.5/site-packages/freearch/theme/skins/freearch_templates/getHeaderImage.py", line 20
    return iter['header-image'].absolute_url()
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/freearch.theme-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
